--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
             .outline1{
                 background-color:white;
             }
-            @media only screen and (max-width: 900px) {
-  .addressdown {
-    removeClass()
+
+    .no-margin
+{
+  margin: 0px !important;
+  padding: 0px !important;
+}
+            @media only screen and (max-width: 400px) {
+  .imgsize{
+    width:50%;
+    height:auto;
+
   }
 }
         </style>
@@ -52,25 +60,36 @@
         </div></div>
         </div>
         <br>
-   <section id="features">
-    <div class="row">
-      <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+
+     <section id="features">
+    <div class="row ">
+      <div class="feature-box no-margin col-lg-4 col-md-12 col-sm-12 h-100 d-flex align-items-center justify-content-center">
         <i class="fas fa-check-circle icon fa-5x"></i>
-        <img width="200px" height="200px" href src="assets/imgs/3001.jpg">
-        <img width="200px" height="200px" href src="assets/imgs/Brick.jpg">
+        <img width="100%" height="200px" href src="assets/imgs/3001.jpg">
+        <img width="100%" height="200px" href src="assets/imgs/Brick.jpg">
       </div>
-      <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+      <div class="feature-box no-margin col-lg-4 col-md-12 col-sm-12 h-100 d-flex align-items-center justify-content-center">
         <i class="fas fa-bullseye icon fa-5x"></i>
-        <img width="200px" height="200px" href src="assets/imgs/Deals.jpg">
-        <img width="200px" height="200px" href src="assets/imgs/Kitchen.jpg">
+        <img width="100%" height="200px" href src="assets/imgs/Deals.jpg">
+        <img width="100%" height="200px" href src="assets/imgs/Kitchen.jpg">
       </div>
-      <div class="feature-box col-lg-4 col-md-12 col-sm-12">
+      <div class="feature-box no-margin col-lg-4 col-md-12 col-sm-12 h-100 d-flex align-items-center justify-content-center">
         <i class="fas fa-heart icon fa-5x"></i>
-        <img width="200px" height="200px" href src="assets/imgs/Lowes.jpg">
-        <img width="200px" height="200px" href src="assets/imgs/YEA.jpg">
+        <img width="100%" height="200px" href src="assets/imgs/Lowes.jpg">
+        <img width="100%" height="200px" href src="assets/imgs/YEA.jpg">
       </div>
     </div>
   </section>
+
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 ">
+    <div class="col-md-4 d-flex align-items-center">
+      
+      <span class="mb-3 mb-md-0 text-black ">© 2022 JL Signs & Crane Services</span>
+    </div>
+  </footer>
+</div>
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
