added nc and sc sign installation and fixed address margin for mobile

--- a/index.html
+++ b/index.html
@@ -12,51 +12,63 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
+
         <style>
             #grad {
-  background-image: linear-gradient(blue, rgb(137, 207, 240), blue);
-
-}
-            .outline1{
+                background-image: linear-gradient(blue, rgb(137, 207, 240), blue);
+            }
+            .outline1 {
                 background-color:white;
             }
 
-    .no-margin
-{
-  margin: 0px !important;
-  padding: 0px !important;
-}
+           .no-margin {
+                margin: 0px !important;
+                padding: 0px !important;
+            }
+            .no-margin2 {
+                padding-bottom: 0px !important;
+                margin-bottom: 0px !important;
+            }
+            .no-margin3 {
+                padding-top:0px !important;
+                margin-top:0px !important;
+            }
             @media only screen and (max-width: 400px) {
-  .imgsize{
-    width:50%;
-    height:auto;
-
-  }
-}
+                .imgsize{
+                    width:50%;
+                    height:auto;
+                }
+            }
         </style>
+
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark no-margin2" style="margin-bottom:0px;">
             <div class="container">
                 <a class="navbar-brand" href="#">JL Signs & Crane Services</a>
             </div>
         </nav>
+
+
         <!-- Page content-->
-        <div class="container">
+        <div class="container no-margin3">
             <div id="grad" class="text-center mt-5 text-light ">
+                <br>
                 <h3>JL Signs <br>& crane Services</h3>
                 <h1>15 Ton JLG Crane</h1>
                 <div class="outline1">
                 <hr style="color:black;">
-                <h3 class="text-black">AC Units - HotTubs - Trusses - Steel</h3>
+                <h3 class="text-black">AC Units - HotTubs - Trusses - Steel - Sign installation</h3>
                 <hr style="color:black;">
             </div>
                 <h1>843-516-3581</h1>
+                <h3>Serving North & South Carolina</h3>
+                <br>
 
             </div>
             <br><div class="container h-100 d-flex align-items-center justify-content-center">
-                <div class="row">
-            <h2 class="col-11">Welding Services Aluminum <br>Steel Fabrication and repairs<br>Channel Letters<br>Illuminated box signs<br>42 Foot 2 Man Lift<br>10 Ton Trailer</h2></div>
-            <h2 class="col-3"><br> Address: 3436 HWY 50 <br> Little River, SC 29566</h2>
+             <div class="row">
+            <h2 class="col-11">Welding Services Aluminum, Steel Fabrication and repairs, Channel Letters, Illuminated box signs, 42 Foot 2 Man Lift 10 Ton Trailer</h2></div>
+            <h2 class="col-4"><br> Address: 3436 HWY 50 Little River, SC 29566</h2>
         </div></div>
         </div>
         <br>
