fixed spacing issue in about section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <br><div class="container h-100 d-flex align-items-center justify-content-center">
              <div class="row">
-            <h2 class="col-11">Welding Services Aluminum, Steel Fabrication and repairs, Channel Letters, Illuminated box signs, 42 Foot 2 Man Lift 10 Ton Trailer</h2></div>
+            <h2 class="col-11">Welding Services Aluminum, Steel Fabrication and repairs, Channel Letters, Illuminated box signs as well as a 42 Foot 2 Man Lift 10 Ton Trailer</h2></div>
             <h2 class="col-4"><br> Address: 3436 HWY 50 Little River, SC 29566</h2>
         </div></div>
         </div>
