--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <hr style="color:black;">
             </div>
                 <h1>843-516-3581</h1>
-                <h3>Serving North & South Carolina</h3>
+                <h3>Serving North & South Carolina <br> Rent a sign 80$ a month</h3>
                 <br>
 
             </div>
